menghapus gambar tidak penting

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="container-fluid">
 
       <a class="navbar-brand logo_h" href="index.html">
-      <img src="img/logokecil.png" alt>
+      <img class="img-fluid" src="img/logokecil.png" alt>
       </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="icon-bar"></span>
@@ -118,247 +118,257 @@
 </div>
 </header>
 
-
+<!-- 
 <section class="home_banner_area">
 <div class="overlay"></div>
 <div class="banner_inner d-flex align-items-center">
 </div>
 </section>
+-->
+<section class="feature_product_area section_gap">
+  <div class="main_box">
+    <div class="container-fluid">
+      <div class="row">
+        <img class="img-fluid" src="img/banner/banner.jpg" alt="">
+      </div>
+    </div>
+  </div>
+</section>
 
 <section class="feature_product_area section_gap">
-<div class="main_box">
-<div class="container-fluid">
-<div class="row">
-<div class="main_title">
-<h2>Produk Kami</h2>
-<p>Produk Jilbab Segi Empat Berkualitas & Trendy</p>
-</div>
-</div>
-<div class="row">
-<div class="col col1">
-<div class="f_p_item">
-<div class="f_p_img">
-<img class="img-fluid" src="img/product/feature-product/abu.jpg" alt>
-<div class="p_icon">
-<a href="#">
-<i class="lnr lnr-heart"></i>
-</a>
-<a href="#">
-<i class="lnr lnr-cart"></i>
-</a>
-</div>
-</div>
-<a href="#">
-<h4>Jilbab Segi Empat Abu-Abu</h4>
-</a>
-<h5>Rp 150.00</h5>
-</div>
-</div>
-<div class="col col2">
-<div class="f_p_item">
-<div class="f_p_img">
-<img class="img-fluid" src="img/product/feature-product/navy.jpg" alt>
-<div class="p_icon">
-<a href="#">
-<i class="lnr lnr-heart"></i>
-</a>
-<a href="#">
-<i class="lnr lnr-cart"></i>
-</a>
-</div>
-</div>
-<a href="#">
-<h4>Jilbab Segi Empat Biru</h4>
-</a>
-<h5>Rp 150.00</h5>
-</div>
-</div>
-<div class="col col3">
-<div class="f_p_item">
-<div class="f_p_img">
-<img class="img-fluid" src="img/product/feature-product/hitam.jpg" alt>
-<div class="p_icon">
-<a href="#">
-<i class="lnr lnr-heart"></i>
-</a>
-<a href="#">
-<i class="lnr lnr-cart"></i>
-</a>
-</div>
-</div>
-<a href="#">
-<h4>Jilbab Segi Empat Hitam</h4>
-</a>
-<h5>Rp 150.00</h5>
-</div>
-</div>
-<div class="col col4">
-<div class="f_p_item">
-<div class="f_p_img">
-<img class="img-fluid" src="img/product/feature-product/fusha.jpg" alt>
-<div class="p_icon">
-<a href="#">
-<i class="lnr lnr-heart"></i>
-</a>
-<a href="#">
-<i class="lnr lnr-cart"></i>
-</a>
-</div>
-</div>
-<a href="#">
-<h4>Jilbab Segi Empat Merah</h4>
-</a>
-<h5>Rp 150.00</h5>
-</div>
-</div>
-<div class="col col5">
-<div class="f_p_item">
-<div class="f_p_img">
-<img class="img-fluid" src="img/product/feature-product/hijau.jpg" alt>
-<div class="p_icon">
-<a href="#">
-<i class="lnr lnr-heart"></i>
-</a>
-<a href="#">
-<i class="lnr lnr-cart"></i>
-</a>
-</div>
-</div>
-<a href="#">
-<h4>Jilbab Segi Empat Hijau</h4>
-</a>
-<h5>Rp 150.00</h5>
-</div>
-</div>
-<div class="col col6">
-<div class="f_p_item">
-<div class="f_p_img">
-<img class="img-fluid" src="img/product/feature-product/hijau.jpg" alt>
-<div class="p_icon">
-<a href="#">
-<i class="lnr lnr-heart"></i>
-</a>
-<a href="#">
-<i class="lnr lnr-cart"></i>
-</a>
-</div>
-</div>
-<a href="#">
-<h4>Jilbab Segi Empat Hijau</h4>
-</a>
-<h5>Rp 150.00</h5>
-</div>
-</div>
-<div class="col col7">
-<div class="f_p_item">
-<div class="f_p_img">
-<img class="img-fluid" src="img/product/feature-product/fusha.jpg" alt>
-<div class="p_icon">
-<a href="#">
-<i class="lnr lnr-heart"></i>
-</a>
-<a href="#">
-<i class="lnr lnr-cart"></i>
-</a>
-</div>
-</div>
-<a href="#">
-<h4>Jilbab Segi Empat Merah</h4>
-</a>
-<h5>Rp 150.00</h5>
-</div>
-</div>
-<div class="col col8">
-<div class="f_p_item">
-<div class="f_p_img">
-<img class="img-fluid" src="img/product/feature-product/hijau.jpg" alt>
-<div class="p_icon">
-<a href="#">
-<i class="lnr lnr-heart"></i>
-</a>
-<a href="#">
-<i class="lnr lnr-cart"></i>
-</a>
-</div>
-</div>
-<a href="#">
-<h4>Jilbab Segi Empat Hijau</h4>
-</a>
-<h5>Rp 150.00</h5>
-</div>
-</div>
-<div class="col col9">
-<div class="f_p_item">
-<div class="f_p_img">
-<img class="img-fluid" src="img/product/feature-product/abu.jpg" alt>
-<div class="p_icon">
-<a href="#">
-<i class="lnr lnr-heart"></i>
-</a>
-<a href="#">
-<i class="lnr lnr-cart"></i>
-</a>
-</div>
-</div>
-<a href="#">
-<h4>Jilbab Segi Empat Abu</h4>
-</a>
-<h5>Rp 150.00</h5>
-</div>
-</div>
-<div class="col col10">
-<div class="f_p_item">
-<div class="f_p_img">
-<img class="img-fluid" src="img/product/feature-product/fusha.jpg" alt>
-<div class="p_icon">
-<a href="#">
-<i class="lnr lnr-heart"></i>
-</a>
-<a href="#">
-<i class="lnr lnr-cart"></i>
-</a>
-</div>
-</div>
-<a href="#">
-<h4>Jilbab Segi Empat Merah</h4>
-</a>
-<h5>Rp 150.00</h5>
-</div>
-</div>
-</div>
-<div class="row">
-<nav class="cat_page mx-auto" aria-label="Page navigation example">
-<ul class="pagination">
-<li class="page-item">
-<a class="page-link" href="#">
-<i class="fa fa-chevron-left" aria-hidden="true"></i>
-</a>
-</li>
-<li class="page-item active">
-<a class="page-link" href="#">01</a>
-</li>
-<li class="page-item">
-<a class="page-link" href="#">02</a>
-</li>
-<li class="page-item">
-<a class="page-link" href="#">03</a>
-</li>
-<li class="page-item blank">
-<a class="page-link" href="#">...</a>
-</li>
-<li class="page-item">
-<a class="page-link" href="#">09</a>
-</li>
-<li class="page-item">
-<a class="page-link" href="#">
-<i class="fa fa-chevron-right" aria-hidden="true"></i>
-</a>
-</li>
-</ul>
-</nav>
-</div>
-</div>
-</div>
+  <div class="main_box">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="main_title">
+        <h2>Produk Kami</h2>
+        <p>Produk Jilbab Segi Empat Berkualitas & Trendy</p>
+        </div>
+      </div>
+      <div class="row">
+      <div class="col col1">
+      <div class="f_p_item">
+      <div class="f_p_img">
+      <img class="img-fluid" src="img/product/feature-product/abu.jpg" alt>
+      <div class="p_icon">
+      <a href="#">
+      <i class="lnr lnr-heart"></i>
+      </a>
+      <a href="#">
+      <i class="lnr lnr-cart"></i>
+      </a>
+      </div>
+      </div>
+      <a href="#">
+      <h4>Jilbab Segi Empat Abu-Abu</h4>
+      </a>
+      <h5>Rp 150.00</h5>
+      </div>
+      </div>
+      <div class="col col2">
+      <div class="f_p_item">
+      <div class="f_p_img">
+      <img class="img-fluid" src="img/product/feature-product/navy.jpg" alt>
+      <div class="p_icon">
+      <a href="#">
+      <i class="lnr lnr-heart"></i>
+      </a>
+      <a href="#">
+      <i class="lnr lnr-cart"></i>
+      </a>
+      </div>
+      </div>
+      <a href="#">
+      <h4>Jilbab Segi Empat Biru</h4>
+      </a>
+      <h5>Rp 150.00</h5>
+      </div>
+      </div>
+      <div class="col col3">
+      <div class="f_p_item">
+      <div class="f_p_img">
+      <img class="img-fluid" src="img/product/feature-product/hitam.jpg" alt>
+      <div class="p_icon">
+      <a href="#">
+      <i class="lnr lnr-heart"></i>
+      </a>
+      <a href="#">
+      <i class="lnr lnr-cart"></i>
+      </a>
+      </div>
+      </div>
+      <a href="#">
+      <h4>Jilbab Segi Empat Hitam</h4>
+      </a>
+      <h5>Rp 150.00</h5>
+      </div>
+      </div>
+      <div class="col col4">
+      <div class="f_p_item">
+      <div class="f_p_img">
+      <img class="img-fluid" src="img/product/feature-product/fusha.jpg" alt>
+      <div class="p_icon">
+      <a href="#">
+      <i class="lnr lnr-heart"></i>
+      </a>
+      <a href="#">
+      <i class="lnr lnr-cart"></i>
+      </a>
+      </div>
+      </div>
+      <a href="#">
+      <h4>Jilbab Segi Empat Merah</h4>
+      </a>
+      <h5>Rp 150.00</h5>
+      </div>
+      </div>
+      <div class="col col5">
+      <div class="f_p_item">
+      <div class="f_p_img">
+      <img class="img-fluid" src="img/product/feature-product/hijau.jpg" alt>
+      <div class="p_icon">
+      <a href="#">
+      <i class="lnr lnr-heart"></i>
+      </a>
+      <a href="#">
+      <i class="lnr lnr-cart"></i>
+      </a>
+      </div>
+      </div>
+      <a href="#">
+      <h4>Jilbab Segi Empat Hijau</h4>
+      </a>
+      <h5>Rp 150.00</h5>
+      </div>
+      </div>
+      <div class="col col6">
+      <div class="f_p_item">
+      <div class="f_p_img">
+      <img class="img-fluid" src="img/product/feature-product/hijau.jpg" alt>
+      <div class="p_icon">
+      <a href="#">
+      <i class="lnr lnr-heart"></i>
+      </a>
+      <a href="#">
+      <i class="lnr lnr-cart"></i>
+      </a>
+      </div>
+      </div>
+      <a href="#">
+      <h4>Jilbab Segi Empat Hijau</h4>
+      </a>
+      <h5>Rp 150.00</h5>
+      </div>
+      </div>
+      <div class="col col7">
+      <div class="f_p_item">
+      <div class="f_p_img">
+      <img class="img-fluid" src="img/product/feature-product/fusha.jpg" alt>
+      <div class="p_icon">
+      <a href="#">
+      <i class="lnr lnr-heart"></i>
+      </a>
+      <a href="#">
+      <i class="lnr lnr-cart"></i>
+      </a>
+      </div>
+      </div>
+      <a href="#">
+      <h4>Jilbab Segi Empat Merah</h4>
+      </a>
+      <h5>Rp 150.00</h5>
+      </div>
+      </div>
+      <div class="col col8">
+      <div class="f_p_item">
+      <div class="f_p_img">
+      <img class="img-fluid" src="img/product/feature-product/hijau.jpg" alt>
+      <div class="p_icon">
+      <a href="#">
+      <i class="lnr lnr-heart"></i>
+      </a>
+      <a href="#">
+      <i class="lnr lnr-cart"></i>
+      </a>
+      </div>
+      </div>
+      <a href="#">
+      <h4>Jilbab Segi Empat Hijau</h4>
+      </a>
+      <h5>Rp 150.00</h5>
+      </div>
+      </div>
+      <div class="col col9">
+      <div class="f_p_item">
+      <div class="f_p_img">
+      <img class="img-fluid" src="img/product/feature-product/abu.jpg" alt>
+      <div class="p_icon">
+      <a href="#">
+      <i class="lnr lnr-heart"></i>
+      </a>
+      <a href="#">
+      <i class="lnr lnr-cart"></i>
+      </a>
+      </div>
+      </div>
+      <a href="#">
+      <h4>Jilbab Segi Empat Abu</h4>
+      </a>
+      <h5>Rp 150.00</h5>
+      </div>
+      </div>
+      <div class="col col10">
+      <div class="f_p_item">
+      <div class="f_p_img">
+      <img class="img-fluid" src="img/product/feature-product/fusha.jpg" alt>
+      <div class="p_icon">
+      <a href="#">
+      <i class="lnr lnr-heart"></i>
+      </a>
+      <a href="#">
+      <i class="lnr lnr-cart"></i>
+      </a>
+      </div>
+      </div>
+      <a href="#">
+      <h4>Jilbab Segi Empat Merah</h4>
+      </a>
+      <h5>Rp 150.00</h5>
+      </div>
+      </div>
+      </div>
+      <div class="row">
+      <nav class="cat_page mx-auto" aria-label="Page navigation example">
+      <ul class="pagination">
+      <li class="page-item">
+      <a class="page-link" href="#">
+      <i class="fa fa-chevron-left" aria-hidden="true"></i>
+      </a>
+      </li>
+      <li class="page-item active">
+      <a class="page-link" href="#">01</a>
+      </li>
+      <li class="page-item">
+      <a class="page-link" href="#">02</a>
+      </li>
+      <li class="page-item">
+      <a class="page-link" href="#">03</a>
+      </li>
+      <li class="page-item blank">
+      <a class="page-link" href="#">...</a>
+      </li>
+      <li class="page-item">
+      <a class="page-link" href="#">09</a>
+      </li>
+      <li class="page-item">
+      <a class="page-link" href="#">
+      <i class="fa fa-chevron-right" aria-hidden="true"></i>
+      </a>
+      </li>
+      </ul>
+      </nav>
+      </div>
+    </div>
+  </div>
 </section>
 
 
