Update Logo Favicon

--- a/index.html
+++ b/index.html
@@ -67,18 +67,18 @@
             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Jilbab</a>
               <ul class="dropdown-menu">
                 <li class="nav-item">
-                  <a class="nav-link" href="category.html">Jilbab Segi Empat</a>
+                  <a class="nav-link" href="">Jilbab Segi Empat</a>
                 <li class="nav-item">
-                  <a class="nav-link" href="single-product.html">Jilbab Phasmina</a>
+                  <a class="nav-link" href="">Jilbab Phasmina</a>
                 <li class="nav-item">
-                  <a class="nav-link" href="checkout.html">Hijab Syari</a>
+                  <a class="nav-link" href="">Hijab Syari</a>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="blog.html">Artikel</a>
+              <a class="nav-link" href="">Artikel</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="">Contact</a>
             </li>
           </ul>
         </div>
@@ -478,8 +478,7 @@
 </div>
 <div class="row footer-bottom d-flex justify-content-between align-items-center">
 <p class="col-lg-12 footer-text text-center">
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com/" target="_blank">Colorlib</a>
-
+Website ini dibuat oleh <a href="https://npahlevi5.github.io/"> Muhammad Naufal Pahlevi</a> &copy;<script>document.write(new Date().getFullYear());</script>
 </p>
 </div>
 </div>
