Percobaan Memperbaiki Banner

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
 -->
 <section class="feature_product_area section_gap">
   <div class="main_box">
-    <div class="container-fluid">
+    <div class="container-fluid-banner">
       <div class="row">
-        <img class="img-fluid" src="img/banner/banner.jpg" alt="">
+        <img class="img-fluid-banner" src="img/banner/banner.jpg" alt="">
       </div>
     </div>
   </div>
