Percobaan ketiga memperbaiki Banner

--- a/index.html
+++ b/index.html
@@ -118,6 +118,13 @@
 </div>
 </header>
 
+<!-- 
+<section class="home_banner_area">
+<div class="overlay"></div>
+<div class="banner_inner d-flex align-items-center">
+</div>
+</section>
+-->
 <section class="feature_product_area section_gap">
   <div class="main_box">
     <div class="container-fluid-banner">
