Mengupdate banner dan mengubah subcription text

--- a/index.html
+++ b/index.html
@@ -377,8 +377,8 @@
 <div class="row justify-content-center">
 <div class="col-lg-8">
 <div class="section-title text-center">
-<h2>Subscribe for Our Newsletter</h2>
-<span>We won’t send any kind of spam</span>
+<h2>Gabung Membership Sulthana Modieste</h2>
+<span>Dan dapatkan diskon dan promo promo terbaru dari kami</span>
 </div>
 </div>
 </div>
